tests/fixtures/guardrails/valid/app/routes/exported-binding-service-import.ts
import { runProductPreview } from "~/app/services/products.server";

const loadProducts = async () => runProductPreview();

export { loadProducts as loader };
