tests/fixtures/guardrails/invalid/route-exported-binding-inline-business-logic/app/routes/products.ts
const loader = async () => " hat ".trim();

export { loader };
